--- a/.env
+++ b/.env
@@ -13,3 +13,10 @@ LIGHTSPARK_USER_ID="todo"
 LIGHTSPARK_USERNAME="todo"
 LIGHTSPARK_UMA_ENCRYPTION_PRIVATE_KEY_HEX="use-sdk"
 LIGHTSPARK_UMA_SIGNING_PRIVATE_KEY_HEX="use-sdk"
+SQLX_OFFLINE=true
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="password"
+POSTGRES_HOST="127.0.0.1"
+POSTGRES_PORT="5432"
+POSTGRES_DB="ls"
+POSTGRES_SSL="true"
